Final clean-up, mostly linting; added a MORTARException class but ended up not using it yet;